--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
     <string name="title_obesidad">Obesidad</string>
     <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
+    <string name="dialog_cooperative_category">Cooperative</string>
+    <string name="dialog_deckbuilding_category">Deckbuilding</string>
+    <string name="dialog_euro_category">Euro</string>
+    <string name="dialog_lcg_category">LCG</string>
+    <string name="dialog_legacy_category">Legacy</string>
+    <string name="dialog_add_game">Add Game</string>
+    <string name="dialog_newgame_button">Add New Game</string>
 </resources>
